fix the issue the tooltip of the barchart being placed behind the bar chart

--- a/frontend/src/visualization/bar-chart/BarChart.css
+++ b/frontend/src/visualization/bar-chart/BarChart.css
@@ -5,7 +5,7 @@
 }
 
 .bar {
-    fill: steelblue;
+    fill: #0E4459;
 }
 
 #selected-city {
