--- a/frontend/src/visualization/line-chart/LineChart.css
+++ b/frontend/src/visualization/line-chart/LineChart.css
@@ -3,16 +3,16 @@
 }
 
 .chart-line {
-    stroke: steelblue;
+    stroke: #0E4459;
     stroke-width: 2.5;
 }
 
 .line-chart-dot {
-    fill: steelblue;
+    fill: #0E4459;
 }
 
 .line-chart-hover-dot {
-    fill: steelblue;
+    fill: #0E4459;
     opacity: 0;
 }
 
